--- a/News-website/style.css
+++ b/News-website/style.css
@@ -6,6 +6,8 @@
 
 body{
     position: relative;
+    background-color: rgb(205, 245, 248);
+    
 }
 
 /* Global CSS */
@@ -17,6 +19,7 @@ body{
 nav{
     background-color: rgb(40, 70, 72);
     box-shadow: 0 7px 10px rgba(0, 0, 0, 0.3);
+    
 }
 .navbar{
     display: flex;
